@startuml

class PanelProcessorViewModel
PanelProcessorViewModel *--> IViewModelFactory
PanelProcessorViewModel *--> IAmACommandProcessor
PanelProcessorViewModel ..> ShowStopEvent

class IAmACommandProcessor
IAmACommandProcessor .up.> OpenWindowHandler : Notify
IAmACommandProcessor .down.> Event

class IViewModelFactory
IViewModelFactory ..> ViewModelBase

class OpenWindowHandler{
    +OpenWindow(ViewModelBase viewModel)
}
OpenWindowHandler ..> Window
OpenWindowHandler ..> ViewModelBase
OpenWindowHandler -down-> IAmACommandProcessor

class Window 
Window <|-- StopView

class StopView
StopView --> StopViewModel

class ViewModelBase
ViewModelBase <|-- StopViewModel 

class ShowStopEvent
ShowStopEvent <|-- Event
@enduml